--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -50,7 +50,7 @@ jobs:
           asset_name: gowords-windows
           asset_content_type: application/octet-stream
       - name: Upload macos binary
-        id: upload-linux-asset
+        id: upload-macos-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
